# math4610

./: assignment1.py  assignment2.py  softwareManual.md
assignment2/: question2.py
assignment3/: centralDiff.py  errordiff.py  evaluatefunc.py  exactdiff.py  fowardDiff.py  increment.py  pyproject.toml  tester.py  testing.py
assignment4/: TOC.md  back-difference  back-difference.c  back_difference  back_difference.h  central-difference.c  central_difference  central_difference.h  central_test  dmaceps  dmaceps.c  dmaceps.h  forward-difference  forward-difference.c  forward_difference  forward_difference.h  l1-distance.c  l1-norm.c  l1_distance  l1_distance.h  l1_norm  l2-distance.c  l2-norm  l2-norm.c  l2Distance  l2_distance  l2_distance.h  l2_norm  l2_norm.h  linf-distance.c  linf-norm.c  linfDistance  linfNorm  linf_distance  linf_distance.h  linf_norm  linf_norm.h  linreg  linreg.c  linreg.h  (+14 more)
assignment4/main.dSYM/Contents/Resources/DWARF/: main
assignment4/smaceps.dSYM/Contents/: Info.plist
assignment4/smaceps.dSYM/Contents/Resources/DWARF/: smaceps
