[tool.poetry]
name = "assignment3"
version = "0.1.0"
description = ""
authors = ["Elsa Schutfort <a02392875@aggies.usu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.12"
mpmath = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
